welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: ')' expected but ';' found.
    setPos(getX();getY()+1)
                 ^ColumnByColumn:18: error: ';' expected but ')' found.
    setPos(getX();getY()+1)
                          ^